--- a/BugManagement/src/app/App.fxml
+++ b/BugManagement/src/app/App.fxml
@@ -4,8 +4,10 @@
 <?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -58,6 +60,13 @@
                   <TableColumn fx:id="start_date_col_user_table" prefWidth="74.39999999999998" text="Start Date" />
                   <TableColumn fx:id="due_date_col_user_table" prefWidth="96.79998779296875" text="Due Date" />
               </columns>
+               <contextMenu>
+                  <ContextMenu fx:id="delete">
+                    <items>
+                      <MenuItem mnemonicParsing="false" onAction="#deleteRow" text="Delete" />
+                    </items>
+                  </ContextMenu>
+               </contextMenu>
             </TableView>
             <Label layoutX="901.0" layoutY="92.0" text="Họ và tên" />
             <Label layoutX="898.0" layoutY="133.0" text="Username" />
@@ -68,7 +77,6 @@
             <Button fx:id="change_pass_bt" layoutX="1050.0" layoutY="243.0" mnemonicParsing="false" onAction="#changePassButtonOnAction" text="Thay đổi mật khẩu" />
             <TextField fx:id="user" editable="false" layoutX="982.0" layoutY="128.0" prefHeight="26.0" prefWidth="190.0" promptText="Username" />
             <Label fx:id="done_label" layoutX="937.0" layoutY="219.0" prefHeight="18.0" prefWidth="214.0" textFill="#27d71a" />
-            <Button layoutX="1018.0" layoutY="332.0" mnemonicParsing="false" onAction="#deleteRow" text="DELETE" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="All_Pj_AnchorPane" layoutX="-1.0" layoutY="31.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="635.0" prefWidth="1200.0" visible="false">
