--- a/BugManagement/src/app/App.fxml
+++ b/BugManagement/src/app/App.fxml
@@ -2,6 +2,9 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Point3D?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -15,6 +18,7 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="1200.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.AppController">
    <children>
@@ -30,9 +34,9 @@
             <Label fx:id="old_pass_label" layoutX="480.0" layoutY="97.0" prefHeight="18.0" prefWidth="92.0" />
             <Label fx:id="new_pass_label" layoutX="480.0" layoutY="141.0" prefHeight="18.0" prefWidth="92.0" />
             <Label fx:id="cf_pass_label" layoutX="498.0" layoutY="188.0" prefHeight="18.0" prefWidth="80.0" />
-            <Button layoutX="203.0" layoutY="249.0" mnemonicParsing="false" onAction="#ChangeButtonOnAction" text="Thay đổi" />
-            <Button layoutX="378.0" layoutY="249.0" mnemonicParsing="false" onAction="#CancelButtonOnAction" text="Cancel" />
-            <Label fx:id="mess_label" layoutX="200.0" layoutY="225.0" prefHeight="18.0" prefWidth="226.0" />
+            <Button layoutX="203.0" layoutY="275.0" mnemonicParsing="false" onAction="#ChangeButtonOnAction" text="Thay đổi" />
+            <Button layoutX="376.0" layoutY="275.0" mnemonicParsing="false" onAction="#CancelButtonOnAction" text="Cancel" />
+            <Label contentDisplay="CENTER" ellipsisString="" layoutX="186.0" layoutY="229.0" pickOnBounds="false" prefHeight="35.0" prefWidth="248.0" text="Mật khẩu phải có tối thiểu 8 ký tự trong đó có ít nhất 1 chữ hoa, 1 chữ thường, 1 số, 1 ký tự đặc biệt" wrapText="true" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="Menu_AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="1200.0" style="-fx-background-color: blue;">
@@ -44,6 +48,7 @@
             <Button layoutX="160.0" layoutY="-1.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#myworkbuttonOnAction" prefHeight="26.0" prefWidth="80.0" text="My work" />
             <Button layoutX="80.0" layoutY="-1.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#allpjbuttonOnAction" prefHeight="26.0" prefWidth="80.0" text="All project" />
             <Button layoutY="-1.0" mnemonicParsing="false" onAction="#homebuttonOnAction" prefHeight="26.0" prefWidth="80.0" text="Home" />
+            <Label fx:id="user" layoutX="915.0" layoutY="3.0" prefHeight="18.0" prefWidth="49.0" visible="false" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="My_Work_AnchorPane" layoutY="25.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="635.0" prefWidth="1200.0" style="-fx-background-color: orange;" visible="false">
@@ -52,8 +57,8 @@
               <columns>
                 <TableColumn fx:id="id_col_user_table" prefWidth="92.79998397827148" text="ID" />
                 <TableColumn fx:id="pj_col_user_table" prefWidth="83.19998168945312" text="Project" />
+                  <TableColumn fx:id="mo_ta_col_user_table" prefWidth="75.0" sortable="false" text="Mô tả" />
                   <TableColumn fx:id="status_col_user_table" prefWidth="80.80006408691406" text="Trạng Thái" />
-                  <TableColumn fx:id="mo_ta_col_user_table" prefWidth="75.0" text="Mô tả" />
                   <TableColumn fx:id="phan_loai_col_user_table" prefWidth="75.0" text="Phân loại" />
                   <TableColumn fx:id="nghiem_trong_col_user_table" prefWidth="116.79998779296875" text="Độ nghiêm trọng " />
                   <TableColumn fx:id="uu_tien_col_user_table" prefWidth="89.60003662109375" text="Độ ưu tiên" />
@@ -76,8 +81,7 @@
             <TextField fx:id="email_text" layoutX="983.0" layoutY="178.0" prefHeight="26.0" prefWidth="190.0" promptText="Email" />
             <Button layoutX="901.0" layoutY="243.0" mnemonicParsing="false" onAction="#changeAccButtonOnAction" text="Thay đổi thông tin" />
             <Button layoutX="1050.0" layoutY="243.0" mnemonicParsing="false" onAction="#changePassButtonOnAction" text="Thay đổi mật khẩu" />
-            <TextField fx:id="user" editable="false" layoutX="982.0" layoutY="128.0" prefHeight="26.0" prefWidth="190.0" promptText="Username" />
-            <Label fx:id="done_label" layoutX="937.0" layoutY="219.0" prefHeight="18.0" prefWidth="214.0" textFill="#27d71a" />
+            <TextField fx:id="username_text" layoutX="982.0" layoutY="128.0" prefHeight="26.0" prefWidth="190.0" promptText="Username" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="All_Pj_AnchorPane" layoutX="-1.0" layoutY="31.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="635.0" prefWidth="1200.0" visible="false">
@@ -94,19 +98,19 @@
             </TextField>
             <Label layoutX="866.0" layoutY="373.0" text="Độ nghiêm trọng" />
             <Label layoutX="892.0" layoutY="412.0" text="Độ ưu tiên" />
-            <Button layoutX="989.0" layoutY="528.0" mnemonicParsing="false" onAction="#addnewbuttonOnAction" text="Add New" />
+            <Button layoutX="989.0" layoutY="556.0" mnemonicParsing="false" onAction="#addnewbuttonOnAction" text="Add New" />
             <TableView fx:id="bugs_table_view" layoutY="-6.0" prefHeight="635.0" prefWidth="856.0">
               <columns>
                   <TableColumn fx:id="id_col" prefWidth="99.99999696016312" text="ID" />
-                <TableColumn fx:id="project_col" prefWidth="84.80001831054688" sortable="false" text="Project " />
+                <TableColumn fx:id="project_col" prefWidth="84.80001831054688" text="Project " />
                 <TableColumn fx:id="mo_ta_col" prefWidth="114.39997863769531" sortType="DESCENDING" sortable="false" text="Mô tả" />
-                  <TableColumn fx:id="status_col" prefWidth="88.79998779296875" sortable="false" text="Trạng thái" />
-                  <TableColumn fx:id="do_nghiem_trong_col" prefWidth="109.60003662109375" sortable="false" text="Độ nghiêm trọng" />
-                  <TableColumn fx:id="do_uu_tien_col" prefWidth="72.0" sortable="false" text="Độ ưu tiên" />
-                  <TableColumn fx:id="phan_loai_col" prefWidth="75.20001220703125" sortable="false" text="Phân loại" />
-                  <TableColumn fx:id="dev_col" prefWidth="59.199951171875" sortable="false" text="Dev" />
-                  <TableColumn fx:id="start_date_col" prefWidth="84.79998779296875" sortable="false" text="Start date" />
-                  <TableColumn fx:id="due_date_col" prefWidth="66.4000244140625" text="Due date" />
+                  <TableColumn fx:id="status_col" prefWidth="88.79998779296875" text="Trạng thái" />
+                  <TableColumn fx:id="phan_loai_col" prefWidth="75.20001220703125" text="Phân loại" />
+                  <TableColumn fx:id="do_nghiem_trong_col" prefWidth="109.60003662109375" text="Độ nghiêm trọng" />
+                  <TableColumn fx:id="do_uu_tien_col" prefWidth="72.0" text="Độ ưu tiên" />
+                  <TableColumn fx:id="dev_col" prefWidth="59.199951171875" text="Dev" />
+                  <TableColumn fx:id="start_date_col" prefWidth="75.199951171875" text="Start date" />
+                  <TableColumn fx:id="due_date_col" prefWidth="74.4000244140625" text="Due date" />
               </columns>
             </TableView>
             <TextArea fx:id="mo_ta_text" layoutX="929.0" layoutY="186.0" prefHeight="118.0" prefWidth="226.0" promptText="Description" />
@@ -114,7 +118,7 @@
             <ComboBox fx:id="phan_loai_box" layoutX="989.0" layoutY="333.0" prefWidth="150.0" />
             <Label layoutX="875.0" layoutY="451.0" text="Due Date" />
             <DatePicker fx:id="due_date_date" layoutX="948.0" layoutY="447.0" />
-            <Label fx:id="message_label" layoutX="913.0" layoutY="510.0" prefHeight="18.0" prefWidth="190.0" textFill="#ff0606" />
+            <Label fx:id="message_label" layoutX="913.0" layoutY="498.0" prefHeight="18.0" prefWidth="190.0" textFill="#ff0606" />
             <Label layoutX="880.0" layoutY="91.0" text="ID" />
             <TextField fx:id="id_text" layoutX="929.0" layoutY="87.0" prefHeight="26.0" prefWidth="190.0" promptText="ID " />
             <Label fx:id="id_label" layoutX="1128.0" layoutY="91.0" prefHeight="18.0" prefWidth="54.0" textFill="RED" />
@@ -123,10 +127,22 @@
             <ComboBox fx:id="dev_box" layoutX="933.0" layoutY="122.0" prefWidth="150.0" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="home_AnchorPane" layoutY="25.0" prefHeight="635.0" prefWidth="1200.0" style="-fx-background-color: green;">
+      <AnchorPane fx:id="home_AnchorPane" layoutY="25.0" prefHeight="635.0" prefWidth="1200.0" style="-fx-background-color: orange;">
          <children>
-            <PieChart fx:id="pie_chart" layoutX="280.0" layoutY="69.0" legendVisible="false" prefHeight="454.0" prefWidth="639.0" />
-            <Label fx:id="percent_label" layoutX="800.0" layoutY="77.0" />
+            <PieChart fx:id="pie_chart" layoutX="131.0" layoutY="127.0" legendVisible="false" prefHeight="391.0" prefWidth="446.0" />
+            <Label fx:id="percent_label" layoutX="221.0" layoutY="40.0" prefHeight="35.0" prefWidth="54.0" textFill="#785cdf">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Label>
+            <LineChart fx:id="line_chart" layoutX="645.0" layoutY="123.0">
+              <xAxis>
+                <CategoryAxis side="BOTTOM" />
+              </xAxis>
+              <yAxis>
+                <NumberAxis side="LEFT" />
+              </yAxis>
+            </LineChart>
+            <ComboBox fx:id="project_box" layoutX="844.0" layoutY="62.0" onAction="#change" prefWidth="150.0" />
          </children></AnchorPane>
    </children>
 </AnchorPane>
