--- a/BugManagement/src/app/fxml.css
+++ b/BugManagement/src/app/fxml.css
@@ -15,6 +15,12 @@
     -fx-fill: blue;
     -fx-font-size: 1.5em;
 }
+
+.axis-label {
+    -fx-text-fill: blue;
+    -fx-font-size: 1.2em;
+}
+
 .button3{ 
     -fx-background-color: transparent;
     -fx-background-radius: 0 0 0 0;
